--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app" class="popup-content">
-      <h1 class="app-name">土豆签123，嘿！</h1>
+      <h1 class="app-name">土豆签123，嘿！!</h1>
 
       <div id="display-container"></div>
 
