feat: add page to storage

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,14 +6,14 @@
   </head>
   <body>
     <div id="app" class="popup-content">
-      <h1 class="app-name">土豆签123，嘿！!</h1>
+      <h1 class="app-name">土豆签</h1>
 
       <div id="display-container"></div>
 
       <footer>
         <p>
           <small>
-            <a href="#" class="js-options">Options</a>
+            <a href="#" class="js-options">选项</a>
           </small>
         </p>
       </footer>
