--- a/src/options.html
+++ b/src/options.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         
-        <div class="option">
+        <div id="options" class="option-wrap">
         </div>
 
       </div>
