--- a/src/options.html
+++ b/src/options.html
@@ -10,7 +10,7 @@
   <div class="grid">
     <div class="unit whole center-on-mobiles">
       <div class="heading">
-        <h1>土豆签123，嘿！</h1>
+        <h1>土豆签</h1>
       </div>
     </div>
   </div>
