--- a/src/options.html
+++ b/src/options.html
@@ -32,9 +32,10 @@
 
       <div class="menu-container">
         <div class="menu-area">
-          <div class="menu-list">
-            <div class="memu-item">默认收藏夹</div>
-            <div class="memu-add-item">
+          <div id="menu-list" class="menu-list">
+            <div class="menu-item">默认收藏夹</div>
+            <div class="menu-item menu-active-item"><input id="addItem" type="text" autofocus></div>
+            <div class="menu-item" data-type="add">
               <svg t="1636131075814" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2410" width="64" height="64"><path d="M874.666667 469.333333H554.666667V149.333333c0-23.466667-19.2-42.666667-42.666667-42.666666s-42.666667 19.2-42.666667 42.666666v320H149.333333c-23.466667 0-42.666667 19.2-42.666666 42.666667s19.2 42.666667 42.666666 42.666667h320v320c0 23.466667 19.2 42.666667 42.666667 42.666666s42.666667-19.2 42.666667-42.666666V554.666667h320c23.466667 0 42.666667-19.2 42.666666-42.666667s-19.2-42.666667-42.666666-42.666667z" p-id="2411" fill="#ffffff"></path></svg>
             </div>
           </div>
