feat: change options

--- a/src/options.html
+++ b/src/options.html
@@ -24,8 +24,7 @@
             </div>
           </div>
           
-          <div id="options" class="option-wrap">
-          </div>
+          <div id="options" class="option-wrap"></div>
   
         </div>
       </div>
