--- a/src/pages/Options/index.html
+++ b/src/pages/Options/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Options & Settings</title>
+    <title>Potato Sign</title>
   </head>
   <body>
     <div id="app"></div>
