feat: 增加输入查询书签

--- a/src/content-script/template.html
+++ b/src/content-script/template.html
@@ -31,10 +31,10 @@
       </span>
     </div>
 
-    <div class="command-palette-stack">
+    <div id="commandStack" class="command-palette-stack">
       <div class="command-palette-group">
         <div class="command-palette-header">标签</div>
-        <div class="command-palette-item">
+        <div class="command-palette-item" data-jump="">
           <span class="icon"></span>
           <div class="result-content"></div>
         </div>
