--- a/src/content-script/template.html
+++ b/src/content-script/template.html
@@ -32,13 +32,13 @@
     </div>
 
     <div id="commandStack" class="command-palette-stack">
-      <div class="command-palette-group">
+      <!-- <div class="command-palette-group">
         <div class="command-palette-header">标签</div>
-        <div class="command-palette-item" data-jump="">
-          <span class="icon"></span>
+        <div class="command-palette-item" data-jump-url="">
+          <span class="icon"><img src="" alt="" /></span>
           <div class="result-content"></div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
