--- a/src/content-script/template.html
+++ b/src/content-script/template.html
@@ -34,9 +34,12 @@
     <div id="commandStack" class="command-palette-stack">
       <!-- <div class="command-palette-group">
         <div class="command-palette-header">标签</div>
-        <div class="command-palette-item" data-jump-url="">
+        <div class="command-palette-item command-palette-selected" data-jump-url="">
           <span class="icon"><img src="" alt="" /></span>
-          <div class="result-content"></div>
+          <div class="result-content">
+            <div class="websize-title"></div>
+            <div class="websize-url"></div>
+          </div>
         </div>
       </div> -->
     </div>
