--- a/src/content-script/template.html
+++ b/src/content-script/template.html
@@ -26,7 +26,7 @@
           autofocus
           class="command-input"
           autocomplete="off"
-          placeholder="请输入要查询的标签"
+          placeholder=""
         />
       </span>
     </div>
